# token-flex

./: .env.example  .gitignore  Dockerfile  README.md  cron-pipeline.sh  docker-push.sh  main.py  manage.ps1  manage.sh  memory_distill.py  pyproject.toml  requirements.txt  setup.py  start.sh  token_flow.db
api/: app.py  auth.py  db_helper.py  device_auth.py  push_client.py  remote_push.py  ws_manager.py
api/routers/: auth_routes.py  chunks.py  health.py  ingest.py  memory.py  summaries.py  token_data.py
aws/: buildspec.yml  ecs-deploy.sh  patch-and-deploy.sh  task-definition.json
db/: pg_compat.py  schema.py
engine/: ingestor.py  s3_uploader.py  scorer.py  summarizer.py
scripts/: export_to_prod.py
token-flow-ui/: .env.example  .env.production  Dockerfile  buildspec.yml  deploy.sh  envoy.yaml  index.html  task-definition.json
token-flow-ui/envoy/: Dockerfile.envoy  envoy.yaml
token-flow-ui/src/: App.jsx  api.js  main.jsx
token-flow-ui/src/components/: Layout.jsx  TokenMeter.jsx
token-flow-ui/src/hooks/: useMe.js
token-flow-ui/src/pages/: Activity.jsx  AuthCallback.jsx  Chunks.jsx  Dashboard.jsx  Login.jsx  MemoryEntries.jsx  PendingAccess.jsx  Sessions.jsx  Summaries.jsx  TokenData.jsx  Users.jsx
token_flow/: _cli.py  _cli_runner.py  _client.py  _push_worker.py  _service.py
token_flow_service.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ui/: nginx.conf  package-lock.json  package.json
ui/src/: App.jsx  api.js  main.jsx
ui/src/components/: Layout.jsx  StatusBadge.jsx
ui/src/pages/: Chunks.jsx  Ingest.jsx  (+2 more)
