[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "token-flow-service"
version     = "0.1.0"
description = "token-flow — local memory distillation and token tracking service for OpenClaw."
readme      = "README.md"
requires-python = ">=3.9"
license     = { text = "MIT" }

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "anthropic>=0.25.0",
    "boto3>=1.34.0",
    "tiktoken>=0.7.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.9",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[project.scripts]
tf-server  = "token_flow._cli:main"

[tool.token-flow]
# Post-install auto-service setup is handled by setup.py cmdclass hooks.
# Supported commands: tf-server install-service | uninstall-service

[tool.setuptools.packages.find]
# All importable packages live at the repo root (no src/ layout).
# We include the four source trees and exclude build/deploy noise.
where     = ["."]
include   = ["token_flow*", "api*", "db*", "engine*"]
exclude   = [
    "aws*", "scripts*", "token-flow-ui*",
    "*.egg-info*", "__pycache__*",
]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.md"]
